Fixed issues with links
- Added "open in new tab" for youtube channel
- Fixed the color issue with the "mailto" link. Previously link went invisible when mouse hovered over. Now, a standard blue hyperlink is visible.

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ h5 {
 	font-weight: 700;
 	line-height: 20px;
 }
+#email-kanna {
+	color: #0645AD;
+}
 p.intro {
 	font-size: 16px;
 	margin: 12px 0 0;
